# crust

./: .gitignore  Cargo.toml  Makefile  test.back.json  test.json  test_string.json  test_string_py.json  tests.jsonl
code_tests/: palindrome_number.jsonl  reverse-string.jsonl  two-sum.jsonl
frontend/: .cta.json  .env.example  README.md  dev.db  package-lock.json  package.json  pnpm-lock.yaml
frontend/prisma/: schema.prisma  seed.ts
frontend/src/: routeTree.gen.ts
frontend/src/components/: CodeEditor.tsx
frontend/src/integrations/better-auth/: header-user.tsx
frontend/src/lib/: auth.ts  jwt.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/$contestCode/: index.tsx  route.tsx
frontend/src/routes/$contestCode/problem/: $problemId.tsx
frontend/src/routes/admin/: index.tsx  login.tsx  route.tsx
frontend/src/routes/admin/contests/: create.tsx
frontend/src/routes/admin/contests/$contestId/: edit.tsx  index.tsx
frontend/src/routes/admin/contests/$contestId/problems/: create.tsx
frontend/src/routes/admin/contests/$contestId/problems/$problemId/: edit.tsx
frontend/src/server/: actions.ts
src/: judger.rs  lib.rs  main.rs  models.rs  runner.rs
src/c_driver/: driver.c
src/cpp_driver/: test.cpp
src/java_driver/: Driver.java  Makefile  Solution.java
src/python_driver/: driver.py  solution.py
tests/: dummy_solution.cpp  integration.rs
