[package]
name = "crust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bollard = "0.15" # Docker API client
clap = { version = "4", features = ["derive"] }
futures-util = "0.3" # For handling Docker IO streams
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
